[gd_scene load_steps=12 format=3 uid="uid://b408bnxlgbuum"]

[ext_resource type="Script" path="res://multiplayer_lobby.gd" id="1_u2fgg"]
[ext_resource type="Script" path="res://multiplayer_lobby_netcode.gd" id="2_2t1uu"]
[ext_resource type="Script" path="res://multiplayer_lobby_title.gd" id="2_sjgo0"]
[ext_resource type="PackedScene" uid="uid://c8jgmdarq1exp" path="res://join_server_disp.tscn" id="3_33gik"]
[ext_resource type="PackedScene" uid="uid://d34ff5wgr3k4a" path="res://host_server_disp.tscn" id="4_7yxdw"]
[ext_resource type="Script" path="res://time_color_label.gd" id="5_js2oa"]
[ext_resource type="PackedScene" uid="uid://c1pkj6iruuudg" path="res://lobby_display.tscn" id="6_rg0cf"]
[ext_resource type="Script" path="res://multiplayer_lobby_player_module.gd" id="7_4c0n0"]
[ext_resource type="Script" path="res://lobby_game_settings.gd" id="7_rc0hl"]
[ext_resource type="Script" path="res://multiplayer_lobby_countdown.gd" id="8_xtbkb"]
[ext_resource type="PackedScene" uid="uid://28reccnlibjq" path="res://chat.tscn" id="9_34aei"]

[node name="multiplayer_lobby" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_u2fgg")

[node name="v" type="VBoxContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 4

[node name="title" type="MarginContainer" parent="v"]
layout_mode = 2
mouse_filter = 2
script = ExtResource("2_sjgo0")

[node name="bg" type="HBoxContainer" parent="v/title"]
layout_mode = 2
mouse_filter = 2

[node name="p" type="PanelContainer" parent="v/title/bg"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="main_menu" type="Button" parent="v/title/bg"]
layout_mode = 2
text = "Main Menu"

[node name="text" type="HBoxContainer" parent="v/title"]
layout_mode = 2
mouse_filter = 2
alignment = 1

[node name="Label" type="Label" parent="v/title/text"]
layout_mode = 2
text = " Multiplayer Lobby - "

[node name="status" type="Label" parent="v/title/text"]
modulate = Color(0.75, 0, 0, 1)
layout_mode = 2
text = "Disconnected "

[node name="main" type="HBoxContainer" parent="v"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="left" type="VBoxContainer" parent="v/main"]
layout_mode = 2
mouse_filter = 2

[node name="top" type="HBoxContainer" parent="v/main/left"]
layout_mode = 2
alignment = 1

[node name="conn_host" type="VBoxContainer" parent="v/main/left/top"]
custom_minimum_size = Vector2(613, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
mouse_filter = 2
theme_override_constants/separation = 0
script = ExtResource("2_2t1uu")

[node name="title" type="PanelContainer" parent="v/main/left/top/conn_host"]
layout_mode = 2
mouse_filter = 2

[node name="h" type="HBoxContainer" parent="v/main/left/top/conn_host/title"]
layout_mode = 2
size_flags_horizontal = 0
mouse_filter = 2
theme_override_constants/separation = -6

[node name="toggle" type="CheckButton" parent="v/main/left/top/conn_host/title/h"]
layout_mode = 2

[node name="v" type="VBoxContainer" parent="v/main/left/top/conn_host/title/h"]
modulate = Color(0.7, 0.7, 0.7, 1)
custom_minimum_size = Vector2(66, 0)
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = -3

[node name="Label" type="Label" parent="v/main/left/top/conn_host/title/h/v"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Switch to:"
horizontal_alignment = 1

[node name="join" type="Label" parent="v/main/left/top/conn_host/title/h/v"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Hosting"
horizontal_alignment = 1

[node name="host" type="Label" parent="v/main/left/top/conn_host/title/h/v"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Connecting"
horizontal_alignment = 1

[node name="m" type="MarginContainer" parent="v/main/left/top/conn_host/title"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="host" type="Label" parent="v/main/left/top/conn_host/title/m"]
visible = false
layout_mode = 2
text = "Host a Server"
horizontal_alignment = 1

[node name="conn" type="Label" parent="v/main/left/top/conn_host/title/m"]
layout_mode = 2
text = "Connect to Server"
horizontal_alignment = 1

[node name="join" parent="v/main/left/top/conn_host" instance=ExtResource("3_33gik")]
layout_mode = 2
mouse_filter = 2

[node name="host" parent="v/main/left/top/conn_host" instance=ExtResource("4_7yxdw")]
visible = false
layout_mode = 2
mouse_filter = 2

[node name="connect_err" type="Label" parent="v/main/left/top/conn_host"]
modulate = Color(0.5, 0.5, 0.5, 1)
custom_minimum_size = Vector2(360, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "Offline"
horizontal_alignment = 1
script = ExtResource("5_js2oa")
max_shift = 0.015
max_shift_for_first = 0.033
repeat_text = Array[String](["Offline"])
r_holds_msec = Array[int]([0, 1000])
repeat_colors = Array[Color]([Color(0.501961, 0.501961, 0.501961, 0), Color(0.827, 0.827, 0.827, 1)])

[node name="game_settings" type="VBoxContainer" parent="v/main/left/top"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1
script = ExtResource("7_rc0hl")

[node name="title" type="PanelContainer" parent="v/main/left/top/game_settings"]
layout_mode = 2

[node name="m" type="MarginContainer" parent="v/main/left/top/game_settings/title"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="Label" type="Label" parent="v/main/left/top/game_settings/title/m"]
layout_mode = 2
text = "Game Settings"
horizontal_alignment = 1

[node name="speed" type="HBoxContainer" parent="v/main/left/top/game_settings"]
layout_mode = 2

[node name="Label" type="Label" parent="v/main/left/top/game_settings/speed"]
layout_mode = 2
text = "Game Speed :"

[node name="HSlider" type="HSlider" parent="v/main/left/top/game_settings/speed"]
modulate = Color(0.411765, 0.411765, 0.411765, 1)
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
max_value = 16.0
value = 8.0
scrollable = false
tick_count = 3
ticks_on_borders = true

[node name="limits" type="HBoxContainer" parent="v/main/left/top/game_settings"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="v/main/left/top/game_settings/limits"]
layout_mode = 2
text = "Limits :"
horizontal_alignment = 2

[node name="rounds" type="SpinBox" parent="v/main/left/top/game_settings/limits"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 15.0
max_value = 50.0
value = 20.0
editable = false
suffix = "Rounds"

[node name="points" type="SpinBox" parent="v/main/left/top/game_settings/limits"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 6.0
max_value = 50.0
value = 20.0
editable = false
suffix = "Points"

[node name="players" type="HBoxContainer" parent="v/main/left"]
custom_minimum_size = Vector2(908, 0)
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
script = ExtResource("7_4c0n0")

[node name="local" parent="v/main/left/players" instance=ExtResource("6_rg0cf")]
layout_mode = 2
size_flags_horizontal = 0
is_local = true

[node name="p0" parent="v/main/left/players" instance=ExtResource("6_rg0cf")]
layout_mode = 2
size_flags_horizontal = 0

[node name="p1" parent="v/main/left/players" instance=ExtResource("6_rg0cf")]
layout_mode = 2
size_flags_horizontal = 0

[node name="chat" parent="v/main" instance=ExtResource("9_34aei")]
layout_mode = 2
size_flags_vertical = 3

[node name="center" type="MarginContainer" parent="."]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("8_xtbkb")

[node name="anchor" type="Node2D" parent="center"]

[node name="countdown" type="Label" parent="center/anchor"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -28.5
offset_top = -68.5
offset_right = 28.5
offset_bottom = 68.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 100
text = "3"

[connection signal="changes_made" from="v/title" to="." method="_on_title_changes_made"]
[connection signal="pressed" from="v/title/bg/main_menu" to="v/title" method="_on_main_menu_pressed"]
[connection signal="client_joined" from="v/main/left/top/conn_host" to="v/title" method="_on_conn_host_client_joined"]
[connection signal="client_joined" from="v/main/left/top/conn_host" to="v/main/left/top/game_settings" method="_on_conn_host_client_joined"]
[connection signal="client_left" from="v/main/left/top/conn_host" to="v/title" method="_on_conn_host_client_left"]
[connection signal="server_joined" from="v/main/left/top/conn_host" to="v/title" method="_on_conn_host_server_joined"]
[connection signal="server_left" from="v/main/left/top/conn_host" to="v/title" method="_on_conn_host_server_left"]
[connection signal="server_started" from="v/main/left/top/conn_host" to="v/title" method="_on_conn_host_server_started"]
[connection signal="server_started" from="v/main/left/top/conn_host" to="v/main/left/top/game_settings" method="_on_conn_host_server_started"]
[connection signal="server_stopped" from="v/main/left/top/conn_host" to="v/title" method="_on_conn_host_server_stopped"]
[connection signal="server_stopped" from="v/main/left/top/conn_host" to="v/main/left/top/game_settings" method="_on_conn_host_server_stopped"]
[connection signal="toggled" from="v/main/left/top/conn_host/title/h/toggle" to="v/main/left/top/conn_host" method="_on_toggle_toggled"]
[connection signal="connection_status" from="v/main/left/top/conn_host/join" to="v/main/left/top/conn_host" method="_on_join_connection_status"]
[connection signal="server_status" from="v/main/left/top/conn_host/host" to="v/main/left/top/conn_host" method="_on_host_server_status"]
[connection signal="drag_ended" from="v/main/left/top/game_settings/speed/HSlider" to="v/main/left/top/game_settings" method="_on_h_slider_drag_ended"]
[connection signal="value_changed" from="v/main/left/top/game_settings/limits/rounds" to="v/main/left/top/game_settings" method="_on_rounds_value_changed"]
[connection signal="value_changed" from="v/main/left/top/game_settings/limits/points" to="v/main/left/top/game_settings" method="_on_points_value_changed"]
[connection signal="local_player_readied" from="v/main/left/players" to="." method="_on_players_local_player_readied"]
[connection signal="readied" from="v/main/left/players/local" to="v/main/left/players" method="_on_local_readied"]
[connection signal="countdown_complete" from="center" to="." method="_on_center_countdown_complete"]
